# slither

./: .gitignore  AUTHORS  BUILDING  COPYING  Makefile.am  Makefile.in  README  README.md  SConstruct  TODO  Version.m4  aclocal.m4  configure  configure.ac  premake-linux  premake-mac  premake.lua
Documentation/: slither.man
Resources/: camera_64x64.xpm  folder_64x64.xpm  pause_32x32.xpm  play_32x32.xpm  rename_32x32.xpm  slither.icns  usb_32x32.xpm
Source/: AnalysisThread.cpp  AnalysisThread.h  CaptureThread.cpp  CaptureThread.h  Experiment.cpp  Experiment.h  ImageAnalysisWindow.cpp  ImageAnalysisWindow.h  MainFrame.cpp  MainFrame.h  Resources.cpp  Resources.fbp  Resources.h  SlitherApp.cpp  SlitherApp.h  SlitherMath.cpp  SlitherMath.h  Version.h.in  VideosGridDropTarget.cpp  Worm.h  WormTracker.cpp  WormTracker.h  config.h.in
Testing/: TrackerDriver.cpp  Worm.py  WormDriver.cpp  WormTracker.py  tracker.py
Translations/: Makevars  POTFILES.in  slither.pot
debian/: changelog  control  copyright  rules
doc/: tips.txt
install/: SConscript.OSX  SConscript.Ubuntu
install/Mac/: AUTHORS  README
install/Mac/Slither.app/Contents/: Info.plist
install/Mac/Slither.app/Contents/Resources/: experiment.icns
install/Ubuntu/DEBIAN/: control  postinst  postrm
install/Ubuntu/usr/share/applications/: slither.desktop
install/Windows/: SlitherSetup.nsi
src/: AnalysisThread.cpp  AnalysisThread.h  CaptureThread.cpp  CaptureThread.h  CheckForUpdateThread.cpp  CheckForUpdateThread.h  Experiment.cpp  ImageAnalysisWindow.cpp  ImageAnalysisWindow.h  MainFrame.cpp  MainFrame.h  Resources.cpp  Resources.fbp  Resources.h  Resources.rc  Resources.xrc  SlitherApp.cpp  SlitherMath.cpp  SlitherMath.h  Tracker.cpp  Tracker.h  VideosGridDropTarget.cpp  VideosGridDropTarget.h  Worm.cpp  Worm.h  WormTracker.cpp  WormTracker.h
src/resources/: analyze_32x32.xpm  book_64x64.xpm  camera.xpm  camera_64x64.xpm  clipboard_32x32.xpm  experiment.xcf  folder_64x64.xpm  pause_32x32.xpm  play_32x32.xpm  record_32x32.xpm  record_60x60.xpm  remove_32x32.xpm  rename_32x32.xpm  robot_64x64.xpm  save_60x60.xpm  skip_back_32x32.xpm  skip_forward_32x32.xpm  slither.xpm  stop_32x32.xpm  stop_60x60.xpm  usb_32x32.xpm
src/testing/: TrackerDriver.cpp  WormDriver.cpp  WormMetrics.cpp
